<resources>
    <string name="app_name">recipe</string>
    <string name="string_Random">ランダム</string>
    <string name="string_Back">戻る</string>
    <string name="string_list">一覧</string>
    <string name="textview_1">レシピ名</string>
    <string name="textview_2">説明</string>
    <string name="textview_3">材料</string>
    <string name="btn1">レシピを登録</string>
    <string name="recipe_name">料理名</string>
    <string name="ingredients">材料</string>
    <string name="description">つくり方</string>
    <string name="btn2">登録</string>
    <string name="btn3">戻る</string>
    <string name="save">保存</string>
    <string name="clear">取り消し</string>
    <string name="amount">分量</string>
    <string name="register">レシピを登録</string>
</resources>