<?xml version="1.0" encoding="utf-8"?>
<ScrollView
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="fill_parent"
    android:layout_height="fill_parent"
    android:background="#FFFFFF"
    tools:context=".SettingActivity"
    >

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:fadeScrollbars="false"
        android:id="@+id/scroll1"
        android:orientation="vertical">

        <EditText
            android:id="@+id/editText1"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:autofillHints=""
            android:ems="10"
            android:hint="@string/recipe_name"
            android:inputType="textPersonName"
            android:minHeight="48dp"
            android:textColorHint="#757575"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.134"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintVertical_bias="0.023"
            />

        <LinearLayout
            android:id="@+id/layoutingredients"
            android:layout_width="418dp"
            android:layout_height="333dp"
            android:orientation="vertical"
            app:layout_constraintTop_toBottomOf="@+id/editText1"
            tools:ignore="MissingConstraints">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="69dp"
                android:orientation="horizontal">

                <EditText
                    android:id="@+id/editText21"
                    android:layout_width="120dp"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="30dp"
                    android:autofillHints=""
                    android:hint="@string/ingredients"
                    android:minHeight="48dp" />

                <EditText
                    android:id="@+id/editText22"
                    android:layout_width="120dp"
                    android:layout_height="wrap_content"
                    android:hint="@string/amount"
                    android:ems="10"
                    android:inputType="textPersonName"
                    />
            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal">

                <Button
                    android:id="@+id/save_button"
                    android:layout_width="wrap_content"
                    android:layout_height="50dp"
                    android:layout_marginStart="50sp"
                    android:backgroundTint="#009688"
                    android:text="@string/save"
                    android:textColor="#000000"
                    tools:ignore="TextContrastCheck"
                    style="?android:attr/buttonBarButtonStyle" />

                <Button
                    android:id="@+id/clear_button"
                    android:layout_width="wrap_content"
                    android:layout_height="50dp"
                    android:layout_marginStart="50sp"
                    android:backgroundTint="#009688"
                    android:text="@string/clear"
                    android:textColor="#000000"
                    tools:ignore="TextContrastCheck"
                    style="?android:attr/buttonBarButtonStyle" />

            </LinearLayout>


            <ListView
                android:id="@+id/list"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                />


        </LinearLayout>

        <EditText
            android:id="@+id/editText3"
            android:layout_width="match_parent"
            android:layout_height="222dp"
            android:layout_marginBottom="16dp"
            android:autofillHints=""
            android:ems="10"
            android:hint="@string/description"
            android:inputType="textPersonName"
            android:textColorHint="#757575"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/layoutingredients"
            app:layout_constraintVertical_bias="0.164" />


        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="73dp"
            android:orientation="horizontal">

            <Button
                android:id="@+id/button2"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="24dp"
                android:backgroundTint="#009688"
                android:onClick="Register2"
                android:text="@string/btn2"
                android:textColor="#000000"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toStartOf="@+id/button3"
                app:layout_constraintHorizontal_bias="0.388"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/editText3"
                app:layout_constraintVertical_bias="0.494"
                tools:ignore="TextContrastCheck"
                style="?android:attr/buttonBarButtonStyle" />

            <Button
                android:id="@+id/button3"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="80dp"
                android:backgroundTint="#009688"
                android:onClick="onClose"
                android:text="@string/btn3"
                android:textColor="#000000"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintHorizontal_bias="0.718"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/editText3"
                app:layout_constraintVertical_bias="0.494"
                tools:ignore="TextContrastCheck"
                style="?android:attr/buttonBarButtonStyle" />
        </LinearLayout>

    </LinearLayout>

</ScrollView>